# eywa

./: Cargo.toml  README.md
src/: actuator.rs  ecp_geometry.rs  encephalon.rs  lib.rs  neuron.rs  neuron_interfaces.rs  sensor.rs
src/encephalon/: neuron.rs
src/neuron/: synapse.rs
